--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: node_js
 node_js:
   - "8"
 script: 
-  - npm run build
+  - yarn build
 install:
-  - npm install
+  - yarn
   - npm install -g hexo
 cache:
   directories:
