--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
+    "hexo-renderer-marked": "^1.0.1",
+    "hexo-renderer-sass": "^0.4.0",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-renderer-marked": "^0.3.2",
     "hexo-server": "^0.3.3"
   }
 }
