--- a/themes/replica/_config.yml
+++ b/themes/replica/_config.yml
@@ -1,11 +1,13 @@
 # left-side user profile
-avatar: # by default https://octodex.github.com/images/baracktocat.jpg
-location:
-email:
+avatar: https://alice.witdor.com/assets/img/alicesmall.jpg
+location: nanjing
+email: 245869567@qq.com
 social:
-  github:
-  weibo:
-  linkedin:
+  zhihu: '//www.zhihu.com/people/aliceprincess-55/activities'
+  weibo: '//weibo.com/u/2749673491/home?wvr=5&lf=reg'
+  github: '//github.com/AlicePrincess'
+  linkedin: '//www.linkedin.com/in/%E6%A2%A6%E7%AB%B9-%E5%90%B4-b9a72b118/'
+  facebook: '//www.facebook.com/ce.ali.96'
 
 # navbar menu
 menu:
